# the-rust-book

./: README.md  graphviz.gv
add/: Cargo.toml
add/add_one/: Cargo.toml
closures-and-iterators/: Cargo.toml  README.md
closures-and-iterators/src/: lib.rs  main.rs
collections/: README.md
collections/src/: main.rs
enumerations/src/: main.rs
error-handling/: Cargo.toml  README.md
error-handling/src/: main.rs
functions/src/: main.rs
generic-types-traits-lifetimes/: README.md  typing_practice.md3.md
generic-types-traits-lifetimes/src/: aggregator.rs  lib.rs  main.rs
guessing_game/src/: main.rs
hello/: 404.html  hello.html
hello/src/: lib.rs  main.rs
hello_macro/hello_macro_derive/src/: lib.rs
hello_package_manager/: Cargo.toml
loops/: main.wasm
loops/src/: main.rs
match-control-flow/src/: main.rs
minigrep/: poem.txt
minigrep/src/: lib.rs  main.rs
multithreading/: READMEN.md
multithreading/src/: lib.rs
object-oriented/: README.d.md
object-oriented/src/: application.rs  gui.rs  lib.rs  posts.rs
ownership/src/: main.rs
package-manager/: Cargo.toml  README.md
package-manager/src/: art.rs  lib.rs  main.rs
patterns-and-matching/src/: lib.rs  main.rs
rectangles/src/: main.rs
references-and-borrowing/src/: main.rs
restaurant/src/: lib.rs  main.rs
slices/src/: main.rs
smart-pointer/: README.md
smart-pointer/src/: lib.rs  main.rs
sofie/: Cargo.toml
sofie/src/: main.rs
structures/src/: main.rs
tests/: README.md
tests/src/: lib.rs
tests/tests/: integration_test.rs
unsafe-rust/: README.md
unsafe-rust/src/: lib.rs
untitled/src/: main.bib  main.tex
variables/src/: main.rs
