[package]
name = "package_manager_example_6923"
description = "This package contains example code from chapter 14 of the rust book"
version = "0.1.0"
edition = "2021"
licence = "GPL-3.0-or-later or MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
# `opt-level` control the number of optimizations that the compiler will apply--it ranges from 0 to 3
# if you're in development, you'll want fewer optimizations to compile faster even if the code runs slower
opt-level = 0
debug = true
split-debuginfo = '...' # Platform-specific
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incrermental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...' # Platform-specific
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
